--- a/style.css
+++ b/style.css
@@ -32,12 +32,14 @@ body
     align-items: center;
     margin-bottom: 20px;
     font-size: 1.8em;
+    justify-content:center;
 }
 
 .todo-app h2 img
 {
     width: 30px;
     margin-left: 10px;
+    align-items:center;
 }
 
 .row 
